TASK - adding search result preview page

--- a/src/main/eshop/index.html
+++ b/src/main/eshop/index.html
@@ -15,6 +15,10 @@
 
     <!-- persooSolutionStart -->
     <script type='text/javascript'>
+        var dataLayer = [{
+            pageType: 'homepage';
+        }];
+
         var persooConfig = {
             apikey: persooAccountID, // variable from globalConfig.js
             persooName: 'persoo',
