--- a/src/main/eshop/category.html
+++ b/src/main/eshop/category.html
@@ -14,6 +14,10 @@
     <link href="style.css" rel="stylesheet" media="screen">
 
     <script type='text/javascript'>
+        var dataLayer = [{
+            pageType: 'category';
+        }];
+
         var persooConfig = {
             apikey: persooAccountID, // variable from globalConfig.js
             persooName: 'persoo',
